[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/rootAttack/rootBurst.gd" type="Script" id=1]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst00.png" type="Texture" id=2]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst01.png" type="Texture" id=3]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst02.png" type="Texture" id=4]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst03.png" type="Texture" id=5]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst04.png" type="Texture" id=6]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst05.png" type="Texture" id=7]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst06.png" type="Texture" id=8]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst07.png" type="Texture" id=9]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst08.png" type="Texture" id=10]
[ext_resource path="res://assets/images/root_attack/root ground burst/root_ground_burst09.png" type="Texture" id=11]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow0.png" type="Texture" id=12]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow1.png" type="Texture" id=13]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow2.png" type="Texture" id=14]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow3.png" type="Texture" id=15]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow4.png" type="Texture" id=16]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow5.png" type="Texture" id=17]
[ext_resource path="res://assets/images/root_attack/root_burst_grow/root_burst_grow6.png" type="Texture" id=18]
[ext_resource path="res://assets/images/root_attack/root_ground_hole.png" type="Texture" id=19]
[ext_resource path="res://assets/sounds/464266__test-sound__gravel-stomp-2.ogg" type="AudioStream" id=20]
[ext_resource path="res://assets/sounds/157942__adejabor__drag-gravel.ogg" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "backwards",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.724, 11.1407 )

[node name="rootBurst" type="Node2D"]
script = ExtResource( 1 )

[node name="rootGroundBurstAnim" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="rootGrowAnim" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -15.9765 )
frames = SubResource( 2 )

[node name="groundHoleSprite" type="Sprite" parent="."]
position = Vector2( 0, -2.86475 )
texture = ExtResource( 19 )

[node name="rootGroundBurstStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
volume_db = -5.0

[node name="rootGrowStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = -5.0
pitch_scale = 0.5

[node name="hitBoxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBoxArea"]
position = Vector2( 0, -11.1284 )
shape = SubResource( 3 )

[node name="dirtParticles" type="CPUParticles2D" parent="."]
modulate = Color( 0.34902, 0.203922, 0, 1 )
rotation = -1.5708
emitting = false
amount = 100
one_shot = true
explosiveness = 0.51
emission_shape = 2
emission_rect_extents = Vector2( 6, 6 )
spread = 35.44
gravity = Vector2( -100, 0 )
initial_velocity = 75.0
[connection signal="animation_finished" from="rootGroundBurstAnim" to="." method="_on_rootGroundBurstAnim_animation_finished"]
[connection signal="animation_finished" from="rootGrowAnim" to="." method="_on_rootGrowAnim_animation_finished"]
[connection signal="finished" from="rootGrowStream" to="." method="_on_rootGrowStream_finished"]
